    that was not part of DMPOnline_v4, but which we added ourselves.

    this way we can attach themes to question options

    These associations can only be read/updated in the RailsAdmin controller
    http://localhost:3000/admin/question_option

  * adds methods to model User:

    * alternative_accounts
    * nemo
    * ensure_password
    * guest?

  * adds before_validation to model User:

    * prevent someone from editing email attribute
    * change attribute org_id based on old table organisation_domains (now: table ugent_org_domains)

  * adds method gdpr? to model Template:

    a template contains privacy related data
    if one of the questions contains the theme "UGENT:DATA"

  * adds methods Plan.ld_uri and Plan.ld

    See also:
      - app/controllers/ugent/internal/exports_controller.rb
      - app/models/ugent/rest_user.rb

  * adds method Role.code_access_level

    only used in Plan.ld (see above)

  * adds methods Org.internal_export_dir and Org.internal_export_url

    internal_export_dir: returns the directory for that organisation where its JSON exports are stored
    internal_export_url: return the base_url for that organisation's JSON exports

    only used in Plan.ld and Ugent::Internal::ExportsController

  * add hook User.after_save:

    copies firstname, surname and org_id to Contributor with same email

  * add hook Role.after_save:

    * creates Contributor with same email, org_id and name (if not exists) as role.user
    * copies orcid identifiers from role.user.identifiers

  * add hook Identifier.after_save:

    when an Identifier of model User is saved,
    and has scheme "orcid", then it is copied
    to all contributors with the same email as that user


- app/controllers/ugent/selectable_user_controller.rb

  ugent specific controller

  when user authenticates with orcid,
  and this orcid matches with multiple users at this end,
  this controller shows a select box from which one
  can choose the user to login to
